# Cube-Studio-2D-X

./: CMakeLists.txt  README.md  setup.py
CubeStudio2D-X/: cubestudio2d.cpp  cubestudio2d.h
examples/basic/: CMakeLists.txt  GameScene.cpp  GameScene.h  main.cpp
python-cli/: download-deps.py  download_deps.py  setup.py
